--- a/style.css
+++ b/style.css
@@ -7,24 +7,32 @@ html {
 	font-family: 'Open Sans', sans-serif;
 	scroll-behavior: smooth;
 }
+
 .wrapper {
 	margin: 0 auto;
 	width: 100%;
 	max-width: 700px;
 }
-.about-me-title::after{
-    content: '';
-	position: absolute;
-	bottom: 150px;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	margin-bottom: -10px;
-	width: 70px;
-	height: 3px;
-	border-radius: 8px;
-	background-color: #007bff;
+hr {
+	width: 60px;
+	margin: 0 auto;
+	border: 1px solid #007bff;
 }
-
+.btn {
+	padding: 14px;
+    margin: auto;
+	font-weight: 700;
+	text-transform: uppercase;
+	border: 1px solid #007bff;
+	color: #333;
+	background-color: transparent;
+    transition: all .3s;
+	cursor: pointer;
+}
+.btn:hover{
+    background-color: #007bff;
+    color: #fff;
+}
 /* header */
 
 .header {
@@ -33,7 +41,7 @@ html {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 60vh;
+	height: 70vh;
 }
 
 .header-img {
@@ -58,18 +66,6 @@ html {
 	letter-spacing: 0.1;
 	color: #007bff;
 }
-.header-title::after {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	margin-bottom: -10px;
-	width: 70px;
-	height: 3px;
-	border-radius: 8px;
-	background-color: #007bff;
-}
 
 .dot {
 	margin: 0 5px;
@@ -93,8 +89,7 @@ html {
 /* nav */
 
 .nav {
-	/* position: relative; */
-	position: sticky;
+	position: relative;
 	width: 100%;
 	height: 50px;
 	width: 100%;
@@ -132,9 +127,9 @@ html {
 .about-me-title {
 	text-transform: uppercase;
 	font-size: 1.9em;
-	margin-bottom: 50px;
 }
 .about-me-img {
+	margin-top: 50px;
 	height: 300px;
 	width: 300px;
 	border-radius: 50%;
@@ -143,18 +138,10 @@ html {
 .second-text {
 	margin-top: 30px;
 }
-.about-me-btn {
-	padding: 14px;
-	margin-top: 60px;
-	font-weight: 700;
-	text-transform: uppercase;
-	background-color: transparent;
-	border: 1px solid #007bff;
-	color: #333;
-	cursor: pointer;
-}
+
 .about-me-text {
 	color: #777;
+	margin-bottom: 30px;
 }
 
 /* portfolio */
@@ -166,28 +153,13 @@ html {
 	text-align: center;
 }
 .portfolio-title {
-    position: relative;
-    z-index: 10;
 	font-size: 1.9em;
 	text-transform: uppercase;
-	margin-bottom: 50px;
-}
-.portfolio-title::after{
-    content: '';
-	position: absolute;
-    bottom: -10px;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	margin-bottom: -10px;
-	width: 70px;
-	height: 3px;
-	border-radius: 8px;
-	background-color: #007bff;
 }
 .portfolio-box-img {
+	margin-top: 50px;
 	display: flex;
 	flex-wrap: wrap;
-	text-align: center;
 	line-height: 200px;
 }
 .portfolio a {
@@ -219,61 +191,36 @@ html {
 /* kontakt */
 .contact {
 	padding: 120px 0;
-    text-align: center;
+	text-align: center;
 }
 .contact-title {
-    position: relative;
-    z-index: 10;
-    text-transform: uppercase;
+	text-transform: uppercase;
 	font-size: 1.9em;
-	margin-bottom: 50px;
-}
-.contact-title::after{
-    content: '';
-	position: absolute;
-    bottom: -10px;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	margin-bottom: -10px;
-	width: 70px;
-	height: 3px;
-	border-radius: 8px;
-	background-color: #007bff;
 }
 
-#name,
-#email {
-	margin-bottom: 15px;
-	padding: 15px;
-	width: 47%;
-	font-size: 1.2em;
-	border: 2px solid #777;
+form {
+	margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-#name {
-	margin-right: 35px;
+
+input[type="text"], input[type="email"]{
+    flex-basis: 49%;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 1em;
 }
 
 textarea {
 	display: block;
-	padding: 15px;
+	padding: 10px;
 	width: 100%;
+    height: 100px;
 	font-size: 1.5em;
 	color: #777;
 	border: 2px solid #777;
-}
-
-.contact-btn {
-	display: block;
-	padding: 14px;
-	margin: 0 auto;
-	margin-top: 20px;
-	font-weight: 700;
-
-	text-transform: uppercase;
-	background-color: transparent;
-	color: #333;
-	border: 1px solid #007bff;
-	cursor: pointer;
+	margin-bottom: 30px;
 }
 
 footer {
@@ -283,6 +230,15 @@ footer {
 	line-height: 50px;
 	background-color: #f2f1ed;
 }
+.contact-items{
+    margin-top: 50px;
+}
+.fa-brands{
+    font-size: 2em;
+    margin: 10px;
+    cursor: pointer;
+    color: #007bff;
+}
 
 @media (max-width: 360px) {
 	.header-title {
@@ -291,6 +247,14 @@ footer {
 	.nav-items {
 		display: none;
 	}
+    .about-me {
+        padding: 120px 20px;
+        text-align: center;
+    }
+    .about-me-img {
+        width: 200px;
+        height: 200px;
+    }
 	.fa-solid {
 		display: block;
 	}
@@ -301,14 +265,16 @@ footer {
 	.contact {
 		padding: 0 5px;
 	}
-	#name,
-	#email {
-		display: inline-block;
-		width: 100%;
-	}
+	
 	textarea {
 		width: 100%;
 	}
+}
+@media(max-width:480px){
+    
+input[type="text"], input[type="email"]{
+    flex-basis: 100%;
+}
 }
 
 @media (min-width: 361px) and (max-width: 576px) {
@@ -321,16 +287,19 @@ footer {
 	.nav-items {
 		display: none;
 	}
+    .about-me-img {
+        width: 250px;
+        height: 250px;
+    }
+    .about-me {
+        padding: 120px 20px;
+        text-align: center;
+    }
 	.fa-solid {
 		display: block;
 	}
 	.portfolio a {
 		width: 99%;
-	}
-	#name,
-	#email {
-		display: inline-block;
-		width: 100%;
 	}
 	textarea {
 		width: 100%;
@@ -347,13 +316,12 @@ footer {
 	.heade p {
 		font-size: 1.2em;
 	}
+    .about-me {
+        padding: 120px 30px;
+        text-align: center;
+    }
 	.portfolio-box-img a {
 		width: 50%;
-	}
-    #name,
-	#email {
-		display: inline-block;
-		width: 100%;
 	}
 	textarea {
 		width: 100%;
@@ -362,4 +330,3 @@ footer {
 		padding: 0 5px;
 	}
 }
-
